latest changes about layout theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
   --secondary-foreground: #ffffff;
   --muted: #f9fafb;
   --muted-foreground: #4b5563;
-  --accent: #f97316;
+  --accent: #2bb673;
   --accent-foreground: #ffffff;
   --destructive: #be123c;
   --destructive-foreground: #ffffff;
@@ -53,7 +53,7 @@
   --secondary-foreground: #ffffff;
   --muted: #334155;
   --muted-foreground: #94a3b8;
-  --accent: #f97316;
+  --accent: #2bb673;
   --accent-foreground: #ffffff;
   --destructive: #be123c;
   --destructive-foreground: #ffffff;
