--- a/styles/globals.css
+++ b/styles/globals.css
@@ -260,3 +260,25 @@
 .animate-slide-in-left {
   animation: slide-in-left 2s ease-out forwards;
 }
+
+
+.perspective {
+  perspective: 1200px;
+}
+
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+.transform-rotate-y-180 {
+  transform: rotateY(180deg);
+}
+  
